--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiogram==2.25.1
 openai==1.12.0
-duckduckgo-search==5.3.0
-pillow
-matplotlib
 sympy
-nump
+pillow
+pytesseract
+duckduckgo-search
+matplotli
